utilities/nginx-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bakery-media
  namespace: bakery-media
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  rules:
  - host: media.bakery
    http:
      paths:
      - path: /radarr
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
      - path: /sonarr
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
      - path: /jackett
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 9117
      - path: /transmission
        pathType: Prefix
        backend:
          service:
            name: transmission-ui
            port:
              number: 9091
      - path: /transmission
        pathType: Prefix
        backend:
          service:
            name: transmission-peer
            port:
              number: 49153
      - path: /sabnzbd
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 9090
  - host: requests.devoptimus.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              number: 5055
  - host: requests.media.bakery
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              number: 5055
